2009-08-12  Marcus Mueller  <znek@mulle-kybernetik.com>

	* 1.1.11b2

	* StreamReader.[hm]: simple abstraction for wrapping small parts of
	  the NSFileHandle  API either around NSFileHandle or NSData.
	  This is used when parsing iTunesDB files and will be extended
	  for parsing the decompressed NSData contents of an iTunesCDB file.

	* iPodLibrary.m: use StreamReader when parsing iTunesDB

	* NSData+ZlibDecompression.m: code cleanup

	* iTunesFileSystem.m: fixed duplicate library inserts

2009-08-09  Marcus Mueller  <znek@mulle-kybernetik.com>

	* IPhoneDiskIPodLibrary.[hm]: new iPod/iPhone library required for
	  parsing the contents of an iPod/iPhone mounted via the
	  iphonedisk (http://code.google.com/p/iphonedisk/) FUSE filesystem.

	* NSData+ZlibDecompression.[hm]: categories for NSData to decompress
	  zlib compressed byte content, required for new iTunesCDB files.

2009-04-07  Marcus Mueller  <znek@mulle-kybernetik.com>

	* 1.1.11b1

	* iTunesFileSystem.m: removed an obsolete and ugly hack by implementing
	  lookup properly, according to my own specs.

	* iTunesLibrary.m, iTunesTrack.m: fixed a typo in description
	  (missing trailing ">")

	* iTunesTrack.m: added a hack for the -ext method, if the file has
	  no extension return "m4a" nevertheless.

2009-01-30  Marcus Mueller  <znek@mulle-kybernetik.com>

	* 1.1.10

	* iTunesPlaylist.[hm]: implemented playlist folders (don't recall
	  when they have been introduced in iTunes), which only contain a set
	  of other playlists. Technically, they also contain the tracks of all
	  their contained playlists, but in iTunesFS (as well as in iTunes)
	  these are ignored.

	* iTunesLibrary.m: only playlists, which are no folders, are added to
	  the top-level. Properly add playlists to their parent folders,
	  creating a nested hierarchy as in iTunes.

2009-01-29  Marcus Mueller  <znek@mulle-kybernetik.com>

	* 1.1.9

	* iTunesLibrary.m: changed detection of libraryPath; if no default is